Touch up coloration to avoid contrast errors

--- a/styles.css
+++ b/styles.css
@@ -81,7 +81,7 @@ button {
 }
 
 button:hover {
-  background-color: #808080;
+  background-color: #000000;
   border-color: #fcba03;
 }
 
